--- a/index.html
+++ b/index.html
@@ -5,7 +5,24 @@
     <title>Title</title>
 </head>
 <body>
-<script src="index.html">
+<style>
+
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+</style>
+<h1 class="lll">0</h1>
+<p class="second-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aut, consequatur cum deleniti dignissimos ex
+    iure laborum natus non odio pariatur praesentium quaerat quasi qui quidem veritatis voluptas voluptatem.</p>
+<p>A eum illum iusto quibusdam quo. Accusamus asperiores consectetur consequatur cum expedita facere, itaque modi quas
+    voluptatem. Aliquid dolorum, inventore qui tempore vel voluptate voluptates? Dolor mollitia odit quibusdam
+    sint.</p>
+<a href="">Link text</a>
+<button class="btb-toggle-color">Turn on dark mode</button>
+
+
+<script src="script.js">
 
 </script>
 </body>
